<resources>
    <string name="app_name">GithubUser</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="search">Search</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">AboutActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="tab_text_3">Following</string>
    <string name="content_tab_home">Welcome Home</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="following">Following</string>
    <string name="follower">Followers</string>
    <string name="username">Username</string>
    <string name="imageprofile">imageprofile</string>
    <string name="company">Company</string>
    <string name="location">location</string>
    <string name="name">Name</string>
    <string name="press">Press Search on App Bar</string>
</resources>